--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,10 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                    <li><a href="#one" class="button scrolly">About me</a></li>
+                </ul>
+                <ul class="actions">
+                    <li><a href="#two" class="button next scrolly">Projects</a></li>
                 </ul>
             </div>
         </div>
@@ -31,10 +34,46 @@
     <div id="main">
 
         <!-- One -->
-        {% include tiles.html %}
+        <section id="one" class="major">
+
+          <!--
+          <header class="major">
+              <h1>About me</h1>
+          </header>
+            <div style="display: flex; border: 1px solid green; justify-content: space-between">
+
+                <div class="row">
+                    <div class="6u 12u$(small)">
+                    <p style="text-transform: lowercase">I'm Jake Roller, a5411551
+                    <br>Projects below</p>
+                  </div>
+                  <div style=></div>
+                    <ul class="actions">
+                      <li><a href="resume.html" class="button special">Resume</a></li>
+                    </ul>
+                </div>
+            </div>
+          -->
+          <div class="inner">
+              <header class="major">
+                  <h2>About me</h2>
+              </header>
+              <div class="content" style="display: flex; justify-content: space-between">
+                  <p>I'm Jake Roller, a dsaljkadslkjdsaljk</p>
+                  <ul class="actions">
+                      <li><a href="resume.html" class="button special">Resume</a></li>
+                  </ul>
+              </div>
+          </div>
+        </section>
 
         <!-- Two -->
-        <section id="two">
+        <section id="two" class="major">
+        {% include tiles.html %}
+        </section>
+
+        <!-- Three -->
+        <!-- <section id="two">
             <div class="inner">
                 <header class="major">
                     <h2>Massa libero</h2>
@@ -44,11 +83,9 @@
                     <li><a href="landing.html" class="button next">Get Started</a></li>
                 </ul>
             </div>
-        </section>
-
+        </section> -->
+        {% include footer.html %}
     </div>
-
-    {% include footer.html %}
 
 </body>
 
