added lots of content

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,9 +20,9 @@
             </header>
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
-                <ul class="actions">
+                <!-- <ul class="actions">
                     <li><a href="#one" class="button scrolly">About me</a></li>
-                </ul>
+                </ul> -->
                 <ul class="actions">
                     <li><a href="#two" class="button next scrolly">Projects</a></li>
                 </ul>
@@ -34,7 +34,7 @@
     <div id="main">
 
         <!-- One -->
-        <section id="one" class="major">
+        <!-- <section id="one" class="major"> -->
 
           <!--
           <header class="major">
@@ -54,7 +54,7 @@
                 </div>
             </div>
           -->
-          <div class="inner">
+          <!-- <div class="inner">
               <header class="major">
                   <h2>About me</h2>
               </header>
@@ -65,7 +65,7 @@
                   </ul>
               </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Two -->
         <section id="two" class="major">
