--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,6 +76,7 @@
 						</li>
 					{% endif %}
 				{% endfor %}
+				<a href="resume.html">Resume</a>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; 2022 {{ site.title }} {{ site.subtitle }}</li>
